--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<h1 id="title"></h1>
-	<p id="info"></p><br>
+	<p id="info"></p>
 	<div style="display: none">
 		<p>
 			<input type="file" accept="audio/midi" id="openfile">
