--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<h1 id="title"></h1>
-	<p id="info"></p><br>
+	<p id="info"></p>
 	<div style="display: none">
 		<div>当前分数：
 			<span id="score"></span>
