--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -33,23 +33,29 @@
 		<div class="textbox">
 			<div class="inner left">输入：</div>
 			<div class="inner right">
-				<input type="checkbox" id="av2bv" onchange="check()" checked><label class="left" for="av2bv">av转bv</label>
-				<input type="checkbox" id="bv2av" onchange="check()" checked><label class="left" for="bv2av">bv转av</label>
-				<input type="checkbox" id="realtime" onchange="realtime()" checked><label class="left" for="realtime">实时转换</label>
-				<input type="checkbox" id="api" onchange="api()"><label class="left disabled" for="api">调用api</label>
+				<input type="checkbox" id="av2bv" onchange="check()" checked>
+				<label class="left" for="av2bv">av转bv</label>
+				<input type="checkbox" id="bv2av" onchange="check()" checked>
+				<label class="left" for="bv2av">bv转av</label>
+				<input type="checkbox" id="realtime" onchange="realtime()" checked>
+				<label class="left" for="realtime">实时转换</label>
+				<input type="checkbox" id="api" onchange="api()">
+				<label class="left disabled" for="api">调用api</label>
 			</div>
 			<div class="clear"></div>
 			<textarea id="input" class="text" oninput="check()"></textarea>
 		</div><br>
 		<div class="textbox">
-			<div class="inner left">输出：<span id="result"></span></div>
+			<div class="inner left">输出：</div>
 			<div class="inner right">
 				<div class="left"><button type="button" id="convert" onclick="convert()">转换</button></div>
-				<div class="left"><button type="button" onclick="copyValue()">复制</button></div>
+				<div class="left"><button type="button" id="copy" onclick="copyValue()">复制</button></div>
 				<div class="left"><button type="button" onclick="document.getElementById('input').value='';convert()">重置</button></div>
 			</div>
 			<div class="clear"></div>
 			<div id="output" class="text"></div>
+			<div class="left">结果：<span id="result"></span></div>
+			<div class="clear"></div><br>
 			<div class="left">不知道什么是bv号？<a href="https://www.bilibili.com/read/cv5167957">点此了解</a></div>
 		</div>
 
