--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -29,7 +29,7 @@
 				<option value="1" selected>P</option>
 			</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<input type="checkbox" id="drumsets">鼓点模式&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br><br>
-			<input type="button" value="转换" onclick="a()">
+			<input type="button" value="转换" onclick="convert()">
 		</p>
 		<p>结果：</p>
 		<p id="output"></p>
