--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -5,7 +5,7 @@
 	<base target="_blank">
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="../static/style.css">
-	<title>Error</title>
+	<title>(っ °Д °;)っ</title>
 	<style>
 		.inner {
 			margin: 5px 0px;
