--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
 	<link rel="stylesheet" href="../static/style.css">
-	<title>Error</title>
+	<title>(っ °Д °;)っ</title>
 </head>
 
 <body>
