--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -102,13 +102,13 @@
 			</div>
 			<div class="clear"></div>
 			<div id="output" class="text"></div>
-			<div class="left">结果：<span id="result"></span></div>
+			<div class="left">结果：<strong id="result"></strong></div>
 			<div class="clear"></div><br>
 			<div class="left">不知道什么是bv号？<a href="https://www.bilibili.com/read/cv5167957">点此了解</a></div>
 		</div>
 
 	</div>
-	<noscript><strong>此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong class="error">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="../static/script.js"></script>
 </body>
