--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -20,8 +20,10 @@
 		<textarea class="input" id="input"></textarea>
 		<br>
 		<button type="button" id="convert" onclick="convert()">转换</button>
+		<p>结果：</p>
+		<p><strong id="output"></strong></p>
 	</div>
-	<noscript><strong>此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong class="error">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="../static/script.js"></script>
 	<script>
