--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -22,7 +22,7 @@
 		<embed id="stage" src="./combat.swf"></embed>
 	</div>
 	<div><strong id="flashInfo"></strong></div>
-	<noscript><strong class="error">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="../static/script.js"></script>
 </body>
