--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -108,7 +108,7 @@
 		</div>
 
 	</div>
-	<noscript><strong class="error">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="../static/script.js"></script>
 </body>
