--- a/midi2json_v3/index.html
+++ b/midi2json_v3/index.html
@@ -34,7 +34,7 @@
 		<p>结果：</p>
 		<p id="output"></p>
 	</div>
-	<noscript><strong class="error">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
+	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="../static/script.js"></script>
 </body>
