--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -27,8 +27,10 @@
 				<option value="4">N</option>
 				<option value="2">O</option>
 				<option value="1" selected>P</option>
-			</select>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<input type="checkbox" id="drumsets">鼓点模式&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br><br>
+			</select>&ensp;&ensp;
+			<input type="checkbox" id="drumsets">
+			<label for="drumsets">鼓点模式</label>
+			&ensp;&ensp;<br><br>
 			<input type="button" value="转换" onclick="convert()">
 		</p>
 		<p>结果：</p>
