--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -4,7 +4,7 @@
 <head>
 	<base target="_blank">
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../static/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
 	<style>
 		::-webkit-scrollbar {
@@ -49,8 +49,13 @@
 
 		.fold,
 		.unfold {
-			-webkit-filter: brightness(0.8);
-			filter: brightness(0.8);
+			-webkit-filter: brightness(0.7);
+			filter: brightness(0.7);
+		}
+		.fold:hover,
+		.unfold:hover {
+			-webkit-filter: brightness(1);
+			filter: brightness(1);
 		}
 
 		.fold::after {
@@ -126,7 +131,7 @@
 	</div>
 	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="../static/script.js"></script>
+	<script src="/script.js"></script>
 </body>
 
 </html>
