--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../static/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
 </head>
 
@@ -38,7 +38,7 @@
 	</div>
 	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="../static/script.js"></script>
+	<script src="/script.js"></script>
 </body>
 
 </html>
