--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -4,7 +4,7 @@
 <head>
 	<base target="_blank">
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="../static/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
 	<style>
 		.inner {
@@ -110,7 +110,7 @@
 	</div>
 	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
-	<script src="../static/script.js"></script>
+	<script src="/script.js"></script>
 </body>
 
 </html>
