--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
-	<link rel="stylesheet" href="./static/style.css">
+	<link rel="stylesheet" href="/style.css">
 	<title>lch&#122;h&#51;473's Homepage</title>
 </head>
 
