--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-	<h1 id="title"></h1>
-	<p id="info"></p>
-	<div style="display: none">
+	<div id="main" style="display: none">
 		<div>当前分数：
 			<span id="score"></span>
 		</div><br>
