--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-	<h1 id="title"></h1>
-	<p id="info"></p>
-	<div style="display: none">
+	<div id="main" style="display: none">
 		<p>
 			<input type="file" accept="audio/midi" id="openfile">
 			<input type="button" value="重置" onclick="location.reload()">
