--- a/av2bv/api.html
+++ b/av2bv/api.html
@@ -4,6 +4,7 @@
 <head>
 	<base target="_blank">
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
+	<script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
 	<style>
@@ -79,17 +80,22 @@
 		<div class="textbox">
 			<div class="inner left">输入：</div>
 			<div class="inner right">
-				<input type="checkbox" id="av2bv" onchange="convert()" checked>
+				<input type="checkbox" id="av2bv" onchange="check()" checked>
 				<label class="left" for="av2bv">av转bv</label>
-				<input type="checkbox" id="bv2av" onchange="convert()" checked>
+				<input type="checkbox" id="bv2av" onchange="check()" checked>
 				<label class="left" for="bv2av">bv转av</label>
+				<input type="checkbox" id="realtime" onchange="realtime()" checked>
+				<label class="left" for="realtime">实时转换</label>
+				<input type="checkbox" id="api" onchange="api()">
+				<label class="left disabled" for="api">调用api</label>
 			</div>
 			<div class="clear"></div>
-			<textarea id="input" class="text" oninput="convert()"></textarea>
+			<textarea id="input" class="text" oninput="check()"></textarea>
 		</div><br>
 		<div class="textbox">
 			<div class="inner left">输出：</div>
 			<div class="inner right">
+				<div class="left"><button type="button" id="convert" onclick="convert()">转换</button></div>
 				<div class="left"><button type="button" id="copy" onclick="copyValue()">复制</button></div>
 				<div class="left"><button type="button" onclick="document.getElementById('input').value='';convert()">重置</button></div>
 			</div>
@@ -101,7 +107,7 @@
 		</div>
 	</div>
 	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
-	<script src="./script.js"></script>
+	<script src="./api.js"></script>
 	<script src="/script.js"></script>
 </body>
 
