--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -6,22 +6,20 @@
 	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
 	<style>
-		#stage{
-			width:96vw;
+		#stage {
+			width: 96vw;
 			max-width: 960px;
-			height:56vw;
+			height: 56vw;
 			max-height: 560px;
 		}
 	</style>
 </head>
 
 <body>
-	<h1 id="title"></h1>
-	<p id="info"></p><br>
-	<div style="display: none">
+	<div id="main" style="display: none">
 		<embed id="stage" src="./combat.swf"></embed>
+		<div><strong id="flashInfo"></strong></div>
 	</div>
-	<div><strong id="flashInfo"></strong></div>
 	<noscript><strong style="color:red">此浏览器不支持JavaScript，该脚本无法运行。</strong></noscript>
 	<script src="./script.js"></script>
 	<script src="/script.js"></script>
