--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
+	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<title>视频转字符画 - lchzh3473制作</title>
 	<style>
 		#stage {
