--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html>
 
 <head>
-	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0,minimum-scale=1,user-scalable=no">
+	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="/style.css">
 	<title>lch&#122;h&#51;473's Homepage</title>
+	<style>
+		.index {
+			width: 60vw;
+			max-width: 270px;
+			display: flex;
+			margin: auto;
+			flex-direction: column;
+			justify-content: center;
+			align-items: stretch;
+		}
+
+		.index a {
+			border: 2px solid #37723a;
+			border-radius: 5px;
+			padding: 10px;
+		}
+	</style>
 </head>
 
 <body>
@@ -12,7 +29,7 @@
 	<div class="index">
 		<a href="./ascii_player">视频转字符画</a><br>
 		<a href="./av2bv">av号与bv号转换器</a><br>
-		<!--<a href="./emote_scraper">b站表情包获取工具</a><br>-->
+		<a href="./emote_scraper">b站表情包获取工具</a><br>
 		<a href="./guess_number">猜数字</a><br>
 		<a href="./json_maker">JSON制作器</a><br>
 		<a href="./midi2json">MIDI转JSON</a><br>
