--- a/roco_combat/index.html
+++ b/roco_combat/index.html
@@ -3,10 +3,11 @@
 
 <head>
 	<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
-	<link rel="stylesheet" href="/style.css">
 	<title>(っ °Д °;)っ</title>
+	<link rel="stylesheet" href="/style.css">
 	<style>
 		#stage {
+			background-color: white;
 			width: 96vw;
 			max-width: 960px;
 			height: 56vw;
