--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<a href="./emote_scraper">b站表情包获取工具</a><br>
 		<a href="./guess_number">猜数字</a><br>
 		<a href="./json_maker">JSON制作器</a><br>
-		<a href="./midi2json">MIDI转JSON</a><br>
+		<a href="./midi2json_v3">MIDI转JSON</a><br>
 		<a href="./monika">Just Monika</a><br>
 		<a href="./roco_combat">洛克王国战斗模拟</a>
 	</div>
