--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -18,7 +18,7 @@
 			<span id="times">0</span>&nbsp;次)
 		</div><br>
 		<div>输入要猜的数字：
-			<input id="num" type="text" name="text">
+			<input id="num" type="number" name="text">
 			<input id="ok" type="button" onclick="guess()" value="确定">
 			<input type="button" value="重置" onclick="location.reload()">
 		</div><br>
