--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="index">
 		<a href="./ascii_player">视频转字符画</a><br>
 		<a href="./av2bv">av号与bv号转换器</a><br>
-		<a href="./emote_scraper">b站表情包获取工具</a><br>
+		<a href="./emote_scraper">b站表情图获取工具</a><br>
 		<a href="./guess_number">猜数字</a><br>
 		<a href="./json_maker">JSON制作器</a><br>
 		<a href="./midi2json_v3">MIDI转JSON</a><br>
