--- a/av2bv/index.html
+++ b/av2bv/index.html
@@ -62,6 +62,8 @@
 
 <body>
 	<div id="main" style="display:none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<p class="profile">
 			在上框输入或粘贴一段包含AV号或BV号的文本，转换结果将在下框显示。<br>
 			点击彩色字可以跳转，点击“复制”按钮将转换结果复制到剪贴板。
