--- a/emote_scraper/index.html
+++ b/emote_scraper/index.html
@@ -11,6 +11,8 @@
 
 <body>
 	<div id="main" style="display: none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<p class="profile">
 			请按照提示进行操作(点击链接可以复制)：<br>
 			首先登录：<a id="website1" onclick="copy(document.getElementById('website1'))">https://passport.bilibili.com/login</a><br>
