--- a/guess_number/index.html
+++ b/guess_number/index.html
@@ -9,6 +9,8 @@
 
 <body>
 	<div id="main" style="display: none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<div>当前分数：
 			<span id="score"></span>
 		</div><br>
