--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<a href="./json_maker">JSON制作器</a><br>
 		<a href="./midi2json_v3">MIDI转JSON</a><br>
 		<a href="./monika">Just Monika</a><br>
-		<a href="./roco_combat">洛克王国战斗模拟</a>
+		<a href="./roco_combat">洛克王国战斗模拟</a><br>
+		<a href="./canvas">canvas动画</a>
 	</div>
 </body>
 
