--- a/midi2json/index.html
+++ b/midi2json/index.html
@@ -9,6 +9,8 @@
 
 <body>
 	<div id="main" style="display: none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<p>
 			<input type="file" accept="audio/midi" id="openfile">
 			<label for="openfile">上传文件</label>
