--- a/midi2json_v3/index.html
+++ b/midi2json_v3/index.html
@@ -25,6 +25,8 @@
 
 <body>
 	<div id="main" style="display: none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<div class="upload">
 			<input type="file" accept="audio/midi" id="upload">
 			<label for="upload">选择midi</label>
