--- a/ascii_player/index.html
+++ b/ascii_player/index.html
@@ -34,6 +34,8 @@
 
 <body>
 	<div id="main" style="display:none">
+		<h1 class="title"></h1>
+		<p class="info"></p>
 		<div class="upload">
 			<input id="upload" type="file" accept="video/*">
 			<label id="control" for="upload">选择视频</label>
